@@ -53,7 +53,7 @@ public class LibrarySelectionType implements Comparable<LibrarySelectionType>, D
   private static final long UNSAVED_ID = 0L;
 
   @Id
-  @GeneratedValue(strategy = GenerationType.AUTO)
+  @GeneratedValue(strategy = GenerationType.IDENTITY)
   private long librarySelectionTypeId = LibrarySelectionType.UNSAVED_ID;
 
   @Column(nullable = false, unique = true)
@@ -136,7 +136,7 @@ public class LibrarySelectionType implements Comparable<LibrarySelectionType>, D
   @Override
   public int hashCode() {
     if (getId() != UNSAVED_ID) {
-      return new Long(getId()).intValue();
+      return Long.valueOf(getId()).intValue();
     } else {
       int hashcode = -1;
       if (getName() != null) hashcode = 37 * hashcode + getName().hashCode();
